src/retrieveCodeoutput/unpackaged/objects/AWS__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Access_Key__c</fullName>
        <label>Access Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bucket_Name__c</fullName>
        <label>Bucket Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Access_Key__c</fullName>
        <label>Secret Access Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AWS</label>
</CustomObject>